Minor width bump in keyboard shortcut popup description to prevent line breaks in some cases

--- a/scss/shadowRoot/keyboardShortcutPopup.scss
+++ b/scss/shadowRoot/keyboardShortcutPopup.scss
@@ -94,10 +94,10 @@
 		.description {
 			padding-right: 20px;
 			text-align: right;
-			width: 260px;
+			width: 270px;
 		}
 		.keys {
-			width: 260px;
+			width: 270px;
 		}
 	}
 }
